Test fixes, refined styling w/ better handling of word wrapping

--- a/app/javascript/styles/_searchPanel.scss
+++ b/app/javascript/styles/_searchPanel.scss
@@ -15,15 +15,22 @@
   display: inline-block;
 }
 
+.cohort-metadata-table {
+  table-layout: fixed;
+}
+
 .cohort-th {
   width: 20%;
 }
 
+.cohort-td {
+  display: table-cell;
+  word-wrap: anywhere;
+}
+
 .study-metadata-entry {
-  display: block;
-  margin-bottom: 3px;
-  float: left;
-  clear: left;
+  margin-right: 3px;
   border-radius: 1em;
   font-size: 12px;
+  line-height: 2em;
 }
